初始文件.